# monitoring-system

./: .gitignore  .gitmodules  README.md  README.org
documents/reports/InitialReport/: main.tex
documents/reports/Report1/: main.tex
firmware/: .clangd  CMakeLists.txt  README.md  sdkconfig
firmware/components/queue_api/: CMakeLists.txt  queue_api.cpp
firmware/components/queue_api/include/: queue_api.hpp
firmware/components/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_i2c.c
firmware/devices/aht10/: CMakeLists.txt  aht10.cpp
firmware/devices/aht10/include/: aht10.hpp
firmware/devices/cjmcu-811/: CMakeLists.txt  cjmcu-811.cpp  i2c.cpp
firmware/devices/cjmcu-811/include/: cjmcu-811.hpp  i2c.hpp
firmware/devices/clockcalendar/: CMakeLists.txt  calendar.cpp  clock.cpp  clockcalendar.cpp
firmware/devices/clockcalendar/include/: calendar.hpp  clock.hpp  clockcalendar.hpp
firmware/devices/dht11/: CMakeLists.txt  dht11.cpp  dht11_driver.cpp  idf_component.yml
firmware/devices/dht11/include/: dht11.hpp  dht11_driver.hpp
firmware/devices/display/: CMakeLists.txt  display.cpp
firmware/devices/display/include/: display.hpp
firmware/devices/gyml8511/: CMakeLists.txt  gyml8511.cpp
firmware/devices/gyml8511/include/: gyml8511.hpp
firmware/devices/http_rq/: CMakeLists.txt  http_rq.cpp
firmware/devices/http_rq/include/: http_rq.hpp
firmware/devices/utils/: CMakeLists.txt  utils.cpp
firmware/devices/utils/include/: utils.hpp
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/main/devices/: display.cpp
firmware/main/drivers/: i2c.cpp  i2c.h
firmware/tasks/cjmcu811_task/: CMakeLists.txt  cjmcu811_task.cpp
firmware/tasks/cjmcu811_task/include/: cjmcu811_task.hpp
firmware/tasks/dht11_task/: CMakeLists.txt  dht11_task.cpp
firmware/tasks/dht11_task/include/: dht11_task.hpp
firmware/tasks/gyml8511_task/: CMakeLists.txt  gyml8511_task.cpp
firmware/tasks/gyml8511_task/include/: gyml8511_task.hpp
firmware/tasks/http_task/: CMakeLists.txt  http_task.cpp
firmware/tasks/http_task/include/: http_task.hpp
firmware/tasks/linux_task/: CMakeLists.txt  linux_task.cpp  uart_gpio.cpp
firmware/tasks/linux_task/include/: linux_task.hpp  uart_gpio.hpp
firmware/tasks/sensor_read_task/: CMakeLists.txt  sensor_read_task.cpp
firmware/tasks/sensor_read_task/include/: sensor_read_task.hpp
firmware/tasks/task_api/: CMakeLists.txt  task_api.cpp
firmware/tasks/task_api/include/: task_api.hpp
firmware/tasks/warning_task/: CMakeLists.txt  warning_task.cpp
firmware/tasks/warning_task/include/: warning_task.hpp
software/: Dockerfile  README.org  compose.yml
software/data_visualization/: view.py
software/data_vizualization/: view.py
software/linux_host/: CMakeLists.txt  Makefile  README.md  server.cc
software/linux_host/libs/: cli.cc  cli.hh  emb_sys_comm.cc  emb_sys_comm.hh  log_protocol.cc  log_protocol.hh  queue.hh  request.cc  request.hh  uart.cc  uart.hh
software/monitoring-data-analysis/: .dockerignore  Dockerfile  main.py  pyrightconfig.toml  req.py  requirements.txt  stats.py  visuals.py
software/monitoring-system-server/: Cargo.toml  Dockerfile  README.org
software/monitoring-system-server/migrations/: 20240202014648_measurements.sql
software/monitoring-system-server/src/: db.rs  handlers.rs  main.rs  router.rs
software/test-client/: Cargo.toml
software/test-client/src/: main.rs
tests/conversion_map_test/: CMakeLists.txt
tests/conversion_map_test/lib/: CMakeLists.txt  map.cpp  map.h
tests/conversion_map_test/test/: CMakeLists.txt  test.cc
tests/queue_test/lib/: CMakeLists.txt  queue.h
tests/queue_test/test/: CMakeLists.txt  test.cc
