[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.33"
rand = "0.8"


